--- a/style.css
+++ b/style.css
@@ -52,6 +52,14 @@ padding: 15px;
 color: black;
 text-align: center;
 }
+.services{
+    background-color: rgb(161, 96, 245);
+    border-radius: 10px;
+    margin: 20px;
+    padding: 15px;
+    color: black;
+    text-align: center;
+    }
 .home_image{
 display: flex;
 }
@@ -114,13 +122,13 @@ display: flex;
     .buttons {
             color: black;
             margin: 10px;
-            padding: 10px;  
             display:table-row;
-            text-align: center;
+            text-align: left;
+            
         }
         
         .button{
-            margin: 20px;
+            margin: 10px;
             border-radius: 4px;
             box-shadow: 10px;
             background-color: white;
@@ -129,7 +137,6 @@ display: flex;
             color: black;
             text-decoration: none;
             border-color: black;
-            padding: 10px;
             font-family:Georgia, 'Times New Roman', Times, serif;
             
         }
